--- a/ssr.service
+++ b/ssr.service
@@ -6,8 +6,7 @@ After=rc-local.service
 Type=simple
 User=root
 Group=root
-WorkingDirectory=/root/shadowsocks
-ExecStart=/usr/bin/python server.py
+ExecStart=/usr/bin/nohup /usr/bin/python /root/shadowsocks/server.py m>> /root/shadowsocks/ssr.log 2>&1 &
 Restart=always
 LimitNOFILE=512000
 [Install]
