--- a/sysctl.conf
+++ b/sysctl.conf
@@ -1,7 +1,7 @@
 net.core.default_qdisc = fq
 net.ipv4.tcp_congestion_control = bbr
 net.ipv4.tcp_fastopen = 3
-fs.file-max = 51200
+fs.file-max = 1000000
 net.core.rmem_max=16777216
 net.core.wmem_max=16777216
 net.core.rmem_default = 65536
