--- a/sysctl.conf
+++ b/sysctl.conf
@@ -1,6 +1,7 @@
 net.core.default_qdisc = fq
 net.ipv4.tcp_congestion_control = bbr
 net.ipv4.tcp_fastopen = 3
+net.ipv4.ip_forward=1
 fs.file-max = 51200
 net.core.rmem_max = 67108864
 net.core.wmem_max = 67108864
