--- a/ssr.service
+++ b/ssr.service
@@ -9,6 +9,7 @@ Group=root
 ExecStart=/usr/bin/nohup /usr/bin/python /root/shadowsocks/server.py m>> /root/shadowsocks/ssr.log 2>&1 &
 ExecStop=/usr/bin/bash /root/shadowsocks/stop.sh
 Restart=always
+RestartSec=5s
 LimitNOFILE=512000
 [Install]
 WantedBy=multi-user.target
