--- a/sss.service
+++ b/sss.service
@@ -9,6 +9,7 @@ Group=root
 ExecStart=/usr/bin/nohup /usr/bin/python /opt/shadowsocks/server.py m>> /opt/shadowsocks/sss.log 2>&1 &
 ExecStop=/usr/bin/bash /opt/shadowsocks/stop.sh
 Restart=always
+RestartSec=5s
 LimitNOFILE=512000
 [Install]
 WantedBy=multi-user.target
