--- a/ssr.service
+++ b/ssr.service
@@ -1,15 +1,16 @@
 [Unit]
 Description=ssr
-After=rc-local.service
+After=network.target
 
 [Service]
 Type=simple
 User=root
 Group=root
-ExecStart=/usr/bin/nohup /usr/bin/python /root/shadowsocks/server.py m>> /root/shadowsocks/ssr.log 2>&1 &
+ExecStart=/usr/bin/nohup /usr/bin/python /root/shadowsocks/server.py >> /root/shadowsocks/ssr.log 2>&1
 ExecStop=/usr/bin/bash /root/shadowsocks/stop.sh
 Restart=always
-RestartSec=5s
+RestartSec=3s
 LimitNOFILE=32768
+
 [Install]
 WantedBy=multi-user.target
