--- a/ss.service
+++ b/ss.service
@@ -1,15 +1,16 @@
 [Unit]
 Description=ss
-After=rc-local.service
+After=network.target
 
 [Service]
 Type=simple
 User=root
 Group=root
-ExecStart=/usr/bin/nohup /usr/bin/python /soft/shadowsocks/server.py m>> /soft/shadowsocks/ss.log 2>&1 &
+ExecStart=/usr/bin/nohup /usr/bin/python /soft/shadowsocks/server.py >> /soft/shadowsocks/ss.log 2>&1
 ExecStop=/usr/bin/bash /soft/shadowsocks/stop.sh
 Restart=always
-RestartSec=5s
+RestartSec=3s
 LimitNOFILE=32768
+
 [Install]
 WantedBy=multi-user.target
