--- a/ssr.service
+++ b/ssr.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=ssr
-After=network.target
+After=rc-local.service
 
 [Service]
 Type=simple
 User=root
 Group=root
-ExecStart=/usr/bin/nohup /usr/bin/python /root/shadowsocks/server.py >> /root/shadowsocks/ssr.log 2>&1
+ExecStart=/usr/bin/nohup /usr/bin/python /root/shadowsocks/server.py
 ExecStop=/usr/bin/bash /root/shadowsocks/stop.sh
 Restart=always
 RestartSec=3s
