--- a/ssr.service
+++ b/ssr.service
@@ -6,9 +6,10 @@ After=rc-local.service
 Type=simple
 User=root
 Group=root
-ExecStart=/usr/bin/nohup /usr/bin/python /root/shadowsocks/server.py m>> /root/shadowsocks/ssr.log 2>&1 &
-ExecStop=/usr/bin/bash /root/shadowsocks/stop.sh
+WorkingDirectory=/root/shadowsocks
+ExecStart=/usr/bin/python server.py
 Restart=always
 LimitNOFILE=512000
+
 [Install]
 WantedBy=multi-user.target
